--- a/projetospring/src/main/resources/templates/posts.html
+++ b/projetospring/src/main/resources/templates/posts.html
@@ -14,6 +14,8 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Post - Spring</a>
+            <a href="/newpost" class="btn btn-primary" role="button">Novo Post</a>
+
         </div>
     </nav>
 </header>
@@ -31,7 +33,9 @@
                     <span th:text="${post.autor}"></span>
                     <span th:text="${post.data}"></span>
                 </p>
-                <a href="#"><h4 class="card-title" style="font-weight: bold; color: black; padding-top: 5px;"><span  th:text="${post.titulo}"></span></h4></a>
+
+                <a th:href="${(#mvc.url('PC#getPostDetails').arg(0, post.id)).build()}"><h4 class="card-title" style="font-weight: bold; color: black; padding-top: 5px;"><span th:text="${post.titulo}"></span></h4></a>
+
                 <p class="card-text"><span th:text="${#strings.abbreviate(post.texto,400)}"></span></p>
             </div>
         </div>
