--- a/projetospring/src/main/resources/templates/postForm.html
+++ b/projetospring/src/main/resources/templates/postForm.html
@@ -5,7 +5,12 @@
     <title>Post - Spring</title>
     <!--CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
+    <!--Format text-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-bs4.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-bs4.js"></script>
 </head>
 <body>
 
@@ -32,6 +37,8 @@
         <div>
 
             <form method="post"> <!--Salva em posts-->
+                <!--Inclui o html "mensagemValidacao"-->
+                <th:block th:include="mensagemValidacao"></th:block>
                 <div class="form-group">
                     <input type="text" class="form-control" name="titulo" placeholder="Título *" /> <!--Aqui se coloca o titulo-->
                 </div>
@@ -52,6 +59,12 @@
         </div>
     </div>
 </section>
-
+<script>
+    $('#summernote').summernote({
+        placeholder: 'Texto *',
+        tabsize: 2,
+        height: 300
+    });
+</script>
 </body>
 </html>
